--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^5.2.1",
     "mongoose": "^9.2.1",
     "node-cron": "^4.2.1",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "yahoo-finance2": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
